added some posts

--- a/_posts/2022-06-23-rip.markdown
+++ b/_posts/2022-06-23-rip.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  
+title:  Rotary Inverted Pendulum
 permalink: /rip/
 date:   2019-08-27 08:45:00
 image:  
@@ -8,4 +8,7 @@ tags:   [Control Theory]
 ---
 
 ### Introduction
+
 Simulation of a Rotary Inverted Pendulum in Matlab-Simulink.
+
+[github repo](https://github.com/ashwath-karthikeyan/rotary-inverted-pendulum)
