--- a/_posts/2022-06-23-rip.markdown
+++ b/_posts/2022-06-23-rip.markdown
@@ -3,12 +3,9 @@ layout: post
 title:  Rotary Inverted Pendulum
 permalink: /rip/
 date:   2019-08-27 08:45:00
-image:  
+image:  rip.png
 tags:   [Control Theory]
 ---
-
-### Introduction
-
-Simulation of a Rotary Inverted Pendulum in Matlab-Simulink.
+# Simulation of a Rotary Inverted Pendulum in Matlab-Simulink.
 
 [github repo](https://github.com/ashwath-karthikeyan/rotary-inverted-pendulum)
