--- a/_posts/2000-01-03-rip.markdown
+++ b/_posts/2000-01-03-rip.markdown
@@ -4,7 +4,7 @@ title:  Rotary Inverted Pendulum
 permalink: /rip/
 date:   2019-08-27 08:45:00
 image:  rip.png
-tags:   [Control Theory]
+tags:   [Control]
 ---
 # Simulation of a Rotary Inverted Pendulum in Matlab-Simulink.
 
