right links to github repos and pictures for all posts

--- a/_posts/2000-01-05-rip.markdown
+++ b/_posts/2000-01-05-rip.markdown
@@ -8,4 +8,6 @@ tags:   [Control]
 ---
 ### Simulation of a Rotary Inverted Pendulum in Matlab-Simulink.
 
-[github repo](https://github.com/ashwath-karthikeyan/rotary-inverted-pendulum)
+![rotary inverted pendulum](../img/rip.png)
+
+[github repo](https://github.com/ashwath-karthikeyan/rotary-inverted-pendulum.git)
