testing gif thumbnails

--- a/_posts/2000-01-05-rip.markdown
+++ b/_posts/2000-01-05-rip.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  Rotary Inverted Pendulum
 permalink: /rip/
 date:   2023-12-30
-image:  rip.png
+image:  pid_small.gif
 tags:   [Control]
 ---
 ## Simulation of a Rotary Inverted Pendulum in Matlab-Simulink.
